[gd_scene load_steps=13 format=3 uid="uid://dr8h1q5c3s00a"]

[ext_resource type="Script" path="res://scripts/cooking.gd" id="1_8m6ew"]
[ext_resource type="Texture2D" uid="uid://b06j3gxiqktve" path="res://assets/grill_background.png" id="1_exqsl"]
[ext_resource type="PackedScene" uid="uid://cr3lvykthla71" path="res://scenes/Burger.tscn" id="1_s83l1"]
[ext_resource type="PackedScene" uid="uid://cob3aq1gvw75a" path="res://scenes/burger_zone.tscn" id="3_8q5w7"]
[ext_resource type="Texture2D" uid="uid://6vteev1vfbyc" path="res://assets/cook-timer.png" id="5_pc4cu"]
[ext_resource type="Texture2D" uid="uid://jwm2x52bo7ao" path="res://assets/cook-timer-arrow.png" id="6_2kw4f"]

[sub_resource type="Animation" id="Animation_htwak"]
resource_name = "Arrow"
length = 10.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookTimerAnimation/CookTimerArrow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2kw4f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CookTimerAnimation/CookTimerArrow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(191, 0)]
}

[sub_resource type="Animation" id="Animation_4ik0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookTimerAnimation/CookTimerArrow:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgii3"]
_data = {
"Arrow": SubResource("Animation_htwak"),
"RESET": SubResource("Animation_4ik0b")
}

[sub_resource type="Animation" id="Animation_jmv7y"]
resource_name = "Arrow"
length = 10.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookTimerAnimation2/CookTimerArrow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2kw4f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CookTimerAnimation2/CookTimerArrow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(191, 0)]
}

[sub_resource type="Animation" id="Animation_44xrh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookTimerAnimation2/CookTimerArrow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2kw4f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CookTimerAnimation2/CookTimerArrow:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqal4"]
_data = {
"Arrow": SubResource("Animation_jmv7y"),
"RESET": SubResource("Animation_44xrh")
}

[node name="Main" type="Node"]
script = ExtResource("1_8m6ew")
burger = ExtResource("1_s83l1")

[node name="Grill Background" type="Sprite2D" parent="."]
position = Vector2(918, 637)
scale = Vector2(4.512, 4.129)
texture = ExtResource("1_exqsl")

[node name="Burger_Start" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(280, 378)

[node name="Grill_Zone1" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(800, 450)

[node name="Grill_Zone2" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(1600, 450)

[node name="Grill_Zone3" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(800, 825)

[node name="Grill_Zone4" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(1600, 825)

[node name="Burger_End" parent="." instance=ExtResource("3_8q5w7")]
position = Vector2(280, 800)

[node name="CookTimerBar" type="Sprite2D" parent="."]
position = Vector2(309.5, 1238)
scale = Vector2(6.172, 5.4)
texture = ExtResource("5_pc4cu")

[node name="CookTimerAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bgii3")
}

[node name="CookTimerArrow" type="Sprite2D" parent="CookTimerAnimation"]
position = Vector2(258.5, 1197)
scale = Vector2(4.828, 4.768)
texture = ExtResource("6_2kw4f")
offset = Vector2(40, 0)

[node name="CookTimerBar2" type="Sprite2D" parent="."]
position = Vector2(1268, 1236)
scale = Vector2(6.172, 5.4)
texture = ExtResource("5_pc4cu")

[node name="CookTimerAnimation2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pqal4")
}

[node name="CookTimerArrow" type="Sprite2D" parent="CookTimerAnimation2"]
position = Vector2(1220, 1197)
scale = Vector2(4.828, 4.768)
texture = ExtResource("6_2kw4f")
